<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_options_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:backgroundTintMode="add">

    <androidx.core.widget.NestedScrollView
...
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textColor="?attr/textColorPrimary"
                        android:textSize="@dimen/primary_font_size"
                        android:typeface="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/dark_mode_switch"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Switch
                        android:id="@+id/dark_mode_switch"
                        android:layout_width="wrap_content"
...
